--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -10,7 +10,8 @@
         "eslint:recommended",
         "@vue/typescript/recommended",
         "@vue/prettier",
-        "@vue/prettier/@typescript-eslint"
+        "@vue/prettier/@typescript-eslint",
+        "plugin:tailwind/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 2021
