--- a/frontend/.stylelintrc
+++ b/frontend/.stylelintrc
@@ -1,3 +1,23 @@
 {
-  "extends": ["stylelint-config-recommended", "stylelint-config-standard"]
+    "extends": "stylelint-config-recommended",
+    "rules": {
+        "at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": [
+                    "extends",
+                    "tailwind",
+                    "layer"
+                ]
+            }
+        ],
+        "block-no-empty": null,
+        "unit-allowed-list": [
+            "em",
+            "rem",
+            "deg",
+            "px",
+            "s"
+        ]
+    }
 }
