--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "*": "prettier -w -u"
   },
   "dependencies": {
+    "@vuedx/typescript-plugin-vue": "^0.7.4",
     "vue": "^3.2.6"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "autoprefixer": "^10.3.4",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tailwind": "^0.2.1",
     "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
