--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,18 +5,15 @@
     "watch": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore . --fix",
-    "lint:style": "stylelint src/**/*.{css,scss,vue}"
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint:script:fix": "eslint --ext .ts,vue --ignore-path .gitignore . --fix",
+    "lint:style": "stylelint src/**/*.{css,scss,vue}",
+    "lint:style:fix": "stylelint src/**/*.{css,scss,vue} --fix"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint:script:fix && npm run lint:style:fix && npx prettier -w -u ."
     }
-  },
-  "lint-staged": {
-    "*.{ts,vue}": "eslint --fix",
-    "*.{css,scss,vue}": "stylelint --fix",
-    "*": "prettier -w -u"
   },
   "dependencies": {
     "@vuedx/typescript-plugin-vue": "^0.7.4",
