--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:script:fix && npm run lint:style:fix && npx prettier -w -u ."
+      "pre-commit": "echo 123"
     }
   },
   "dependencies": {
