--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,10 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo 123"
+      "pre-commit": "npm run lint:script:fix && npm run lint:style:fix && npx prettier -w -u ."
     }
   },
   "dependencies": {
-    "@vuedx/typescript-plugin-vue": "^0.7.4",
     "vue": "^3.2.6"
   },
   "devDependencies": {
@@ -27,6 +26,7 @@
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vuedx/typescript-plugin-vue": "^0.7.4",
     "autoprefixer": "^10.3.4",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
