--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore .",
     "lint:script:fix": "eslint --ext .ts,vue --ignore-path .gitignore . --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
-    "lint:style:fix": "stylelint src/**/*.{css,scss,vue} --fix"
+    "lint:style:fix": "stylelint src/**/*.{css,scss,vue} --fix",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "husky": {
     "hooks": {
@@ -32,7 +33,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tailwind": "^0.2.1",
     "eslint-plugin-vue": "^7.17.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
