--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:script:fix && npm run lint:style:fix && npx prettier -w -u ."
+      "pre-commit": "cd frontend && npm run lint:script:fix && npm run lint:style:fix && npx prettier -w -u ."
     }
   },
   "dependencies": {
