--- a/frontend/.stylelintrc
+++ b/frontend/.stylelintrc
@@ -1,23 +1,13 @@
 {
-    "extends": "stylelint-config-recommended",
-    "rules": {
-        "at-rule-no-unknown": [
-            true,
-            {
-                "ignoreAtRules": [
-                    "extends",
-                    "tailwind",
-                    "layer"
-                ]
-            }
-        ],
-        "block-no-empty": null,
-        "unit-allowed-list": [
-            "em",
-            "rem",
-            "deg",
-            "px",
-            "s"
-        ]
-    }
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["extends", "tailwind", "layer"]
+      }
+    ],
+    "block-no-empty": null,
+    "unit-allowed-list": ["em", "rem", "deg", "px", "s"]
+  }
 }
