--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,18 @@
     "lint:script:fix": "eslint --ext .ts,vue --ignore-path .gitignore . --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
     "lint:style:fix": "stylelint src/**/*.{css,scss,vue} --fix",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "test:e2e:browse": "cypress open",
+    "test:e2e": "cypress run",
+    "install:cypress": "cypress install",
+    "prepare:husky": "cd .. && husky install frontend/.husky"
   },
   "dependencies": {
+    "@cypress/vite-dev-server": "^2.1.0",
+    "@cypress/vue": "^2.2.3",
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.1",
     "@types/node": "^16.7.11",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
@@ -24,7 +30,9 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vuedx/typescript-plugin-vue": "^0.7.4",
     "autoprefixer": "^10.3.4",
+    "cypress": "^8.3.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tailwind": "^0.2.1",
     "eslint-plugin-vue": "^7.17.0",
