--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@cypress/vite-dev-server": "^2.1.0",
     "@cypress/vue": "^2.2.3",
-    "vue": "^3.2.6"
+    "vue": "^3.2.6",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.1",
