--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@cypress/vite-dev-server": "^2.1.0",
     "@cypress/vue": "^2.2.3",
+    "vee-validate": "^4.5.3",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
   },
