--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zawquiz-frontend",
   "version": "1.0.0",
-  "scripts": {
+    "scripts": {
     "watch": "vite",
     "serve": "vite preview",
     "build": "vue-tsc --noEmit && vite build",
@@ -13,20 +13,23 @@
     "lint:script:fix": "eslint --ext .ts,vue --ignore-path .gitignore . --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
     "lint:style:fix": "stylelint src/**/*.{css,scss,vue} --fix",
-    "prepare:husky": "cd .. && husky install frontend/.husky"
+    "prepare:husky": "cd .. && husky install frontend/.husky",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@cypress/vite-dev-server": "^2.1.0",
     "@cypress/vue": "^2.2.3",
+    "@tailwindcss/typography": "^0.4.1",
+    "@vueform/multiselect": "^2.2.0",
     "vee-validate": "^4.5.3",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
+    "@tailwindcss/jit": "^0.1.10",
     "@testing-library/cypress": "^8.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/vue": "^6.4.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/vue": "^6.5.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.7.11",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
@@ -41,11 +44,12 @@
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-tailwind": "^0.2.1",
+    "eslint-plugin-tailwind": "^0.1.0",
     "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.0",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^11.1.2",
+    "patch-package": "^6.4.7",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
