feature create project structure

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "watch": "ts-node-dev --respawn ./src/index.ts",
-    "test": "jest --forceExit --collect-coverage"
+    "test": "jest --forceExit --collect-coverage --runInBand"
   },
   "repository": {
     "type": "git",
