--- a/.github/workflows/Backend-Tests.yml
+++ b/.github/workflows/Backend-Tests.yml
@@ -24,7 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: cd backend
-      - run: npm install
-      - run: npm test
+      - name: Install and test backend
+        working-directory: ./backend
+        run: | 
+          npm install
+          npm test
 
