--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "watch": "ts-node-dev --respawn ./src/index.ts",
-    "test": "jest --forceExit --collect-coverage --runInBand"
+    "watch:ts": "ts-node-dev --respawn ./src/index.ts",
+    "watch:js": "tsc && node dist/index.js",
+    "test:unit": "jest --forceExit --runInBand",
+    "test:coverage": "jest --forceExit --coverage --runInBand",
+    "format:eslint":"eslint src/** --fix"
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,11 @@
     "@types/expect": "^24.3.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
