--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
+APP_KEY=
+APP_URL=
+
 DB_HOST=
 DB_NAME=
 DB_LOGIN=
@@ -6,3 +9,6 @@ DB_PASSWORD=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
