--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,11 @@
   },
   "homepage": "https://github.com/zawQuiz/zawQuiz#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/expect": "^24.3.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.9",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -44,8 +46,16 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/passport": "^1.0.7",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "fastify": "^3.24.0",
-    "mongoose": "^6.0.13"
+    "fastify-jwt": "^3.2.1",
+    "fastify-passport": "^0.4.3",
+    "fastify-secure-session": "^3.0.0",
+    "mongoose": "^6.0.13",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
