--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.24.0",
     "fastify-jwt": "^3.2.1",
+    "fastify-oauth2": "^4.3.0",
     "fastify-passport": "^0.4.3",
     "fastify-secure-session": "^3.0.0",
     "mongoose": "^6.0.13",
