--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zawquiz-frontend",
   "version": "1.0.0",
-    "scripts": {
+  "scripts": {
     "watch": "vite",
     "serve": "vite preview",
     "build": "vue-tsc --noEmit && vite build",
@@ -59,6 +59,7 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.2",
     "vite": "^2.5.2",
+    "vite-svg-loader": "^3.1.0",
     "vue-tsc": "^0.2.2",
     "vue3-jest": "^27.0.0-alpha.1"
   }
